remove margin on top of four images and fix horizontal scroll

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -10,6 +10,7 @@ body {
   margin: 20px;
   font-family: 'Lato', sans-serif;
   word-spacing: 0.2em;
+  overflow-x: hidden; 
   min-width: 1565px;
 }
 
@@ -106,10 +107,6 @@ a {
 .watch-text {
   top: 260px;
   font-size: 1.5rem;
-}
-
-.content {
-  margin: 10px 0;
 }
 
 .content li {
